clang/test/BSC/Positive/Ownership/RuleCheck/Maple/subscope_return/subscope_return.cbs
// RUN: %clang_cc1 -verify %s
// expected-no-diagnostics
// RUN: %clang %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output

struct A {
    int a;
};

void eat(struct A *owned a) {
    struct A *b = (struct A*)a;
}

void f() {
    struct A a = { .a = 0 };
    if (a.a) {
        if(a.a) {
            int b;
            if (b) {
                int c;
                return;
            } else {
                int d;
                return;
            }
        }
    }
}

int main() { return 0; }