clang/test/BSC/Negative/Trait/r3/trait_op_priority/trait_op_priority.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
// expected-no-diagnostics

struct B {
    int a;
    int b;
};

struct A {
    struct B b;
    struct B * c;
    struct B d;
    struct A * e;
    struct A * f;
};

void func1(struct A a) {
    int res = (int)(*(a.c)).b;
    return;
}